--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <h3>สมาชิกในกลุ่ม</h3>
   <ul>
-    <li>นาย A รหัส ... – เป้าหมาย: อยากเป็น Backend Developer ที่เขียนโค้ดอ่านง่ายและปลอดภัย</li>
+    <li>นายจักรกฤษณ์ จาปัญญะ รหัส 66543206040-8 เป้าหมาย: อยากเป็นคนที่เขียนโค้ดได้นิดหน่อย</li>
     <li>นางสาว B รหัส ... – เป้าหมาย: อยากเป็น Full-stack Developer ที่เข้าใจทั้งฝั่งผู้ใช้และโค้ด</li>
     <li>นาย C รหัส ... – เป้าหมาย: อยากเป็น DevOps ที่ช่วยให้ระบบเสถียรและ deploy ได้บ่อย</li>
   </ul>
