--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <h3>สมาชิกในกลุ่ม</h3>
   <ul>
     <li>นายจักรกฤษณ์ จาปัญญะ รหัส 66543206040-8 เป้าหมาย: อยากเป็นคนที่เขียนโค้ดได้นิดหน่อย</li>
-    <li>นางเมย์คาร์ สุวรรณวิสุทธิ์ รหัส 66543206085-3 – เป้าหมาย: อยากเป็น Full-stack Developer ที่เข้าใจทั้งฝั่งผู้ใช้และโค้ด</li>
-    <li>นายจิรวัฒน์ มาลัยวรรณ รหัส 66543206070-5 – เป้าหมาย: อยากเป็น DevOps ที่ช่วยให้ระบบเสถียรและ deploy ได้บ่อย</li>
+    <li>นางเมย์คาร์ สุวรรณวิสุทธิ์ รหัส 66543206085-3 เป้าหมาย: อยากเป็น Full-stack Developer ที่เข้าใจทั้งฝั่งผู้ใช้และโค้ด</li>
+    <li>นายจิรวัฒน์ มาลัยวรรณ รหัส 66543206070-5 เป้าหมาย: อยากเป็น DevOps ที่ช่วยให้ระบบเสถียรและ deploy ได้บ่อย</li>
   </ul>
 
   <p>ไอเดีย Term Project (เบื้องต้น): ระบบจัดการ ... (สามารถแก้ไข/ต่อยอดภายหลังได้)</p>
