--- a/index.html
+++ b/index.html
@@ -17,5 +17,9 @@
   </ul>
 
   <p>ไอเดีย Term Project (เบื้องต้น): ระบบจัดการ ... (สามารถแก้ไข/ต่อยอดภายหลังได้)</p>
+  <script>
+  console.log("ENGCE301 Lab 1 script loaded");
+  alert("Welcome to Software Engineering World!");
+  </script>
 </body>
 </html>
