แก้ตัว E ตรงสุริคำ

--- a/Lab2/index.html
+++ b/Lab2/index.html
@@ -185,7 +185,7 @@
                     <!-- Team Member 3 -->
                     <article class="team-member">
                         <img src="assets/images/member3.jpg" alt="Member Name">
-                        <h3>นายปรเมษฐ สุริคำE</h3>
+                        <h3>นายปรเมษฐ สุริคำ</h3>
                         <p class="role">Frontend / System Analysis</p>
                         <p class="student-id">66543206038-2</p>
                     </article>
