--- a/Lab3/my-labs.html
+++ b/Lab3/my-labs.html
@@ -44,20 +44,23 @@
                     <span>Score</span>
                 </div>
 
+                <!-- LAB 1 -->
                 <div class="status-row">
                     <span>LAB 1</span>
                     <span>HTML Structure &amp; Semantic</span>
-                    <span><span class="status-tag status-done">Submitted</span></span>
+                    <span><span class="status-tag status-done">Graded</span></span>
                     <span>100 / 100</span>
                 </div>
 
+                <!-- LAB 2 -->
                 <div class="status-row">
                     <span>LAB 2</span>
                     <span>Requirements Elicitation</span>
-                    <span><span class="status-tag status-done">Submitted</span></span>
+                    <span><span class="status-tag status-done">Graded</span></span>
                     <span>85 / 100</span>
                 </div>
 
+                <!-- LAB 3 -->
                 <div class="status-row">
                     <span>LAB 3</span>
                     <span>Agile Requirements &amp; Use Case Modeling</span>
@@ -65,26 +68,39 @@
                     <span>–</span>
                 </div>
 
+                <!-- LAB 4 -->
                 <div class="status-row">
                     <span>LAB 4</span>
-                    <span><!-- TODO: ชื่อ LAB 4 ของกลุ่ม --></span>
+                    <span>HTML Submission Form &amp; Validation</span>
                     <span><span class="status-tag status-late">Late</span></span>
-                    <span><!-- TODO: คะแนน / หมายเหตุ --></span>
+                    <span>70 / 100</span>
                 </div>
 
+                <!-- LAB 5 -->
                 <div class="status-row">
                     <span>LAB 5</span>
-                    <span><!-- TODO: ชื่อ LAB 5 ของกลุ่ม --></span>
+                    <span>My Labs Status &amp; Feedback Page</span>
                     <span><span class="status-tag status-pending">Not Assigned</span></span>
                     <span>–</span>
                 </div>
             </div>
 
             <p class="section-note">
-                <!-- TODO: Student – เชื่อมโยงข้อความนี้กับ Late Submission Policy ใน SRS/Use Case -->
-                Status labels (Submitted / Late / Awaiting Submission) should follow
-                the Late Submission Policy defined in your SRS and UC-01 / UC-03.
+                This table is a mockup that follows our Late Submission Policy
+                and the requirements in <strong>FR-4 Handle Late Submission</strong> และ
+                <strong>FR-8 View My Lab Status</strong> จาก SRS ของระบบ Lab Submission Portal.
+                <br><br>
+                การกำหนดสถานะต่าง ๆ อ้างอิงจาก Use Case ที่เราเขียนไว้:
+                <br>
+                – <strong>UC-03: Submit Lab</strong> กำหนดว่าเมื่อส่งงาน ระบบจะตรวจสอบเวลาเทียบ deadline
+                ถ้าส่งภายในกำหนดจะเป็น <strong>Submitted/Graded</strong> แต่ถ้าส่งเกินจะเป็น <strong>Late</strong><br>
+                – <strong>UC-04: View My Lab Status</strong> อธิบายการแสดงผลภาพรวมสถานะทุก LAB
+                เช่น <em>Not Submitted / Submitted / Late / Graded</em> บนหน้า My Labs
+                <br><br>
+                ใน Prototype นี้ข้อมูลยังเป็น <strong>mock data</strong> แต่โครงสร้างตารางและสถานะ
+                ถูกออกแบบให้พร้อมต่อยอดไปใช้กับข้อมูลจริงในอนาคต
             </p>
+            
         </section>
     </main>
 
