--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -36,11 +36,11 @@
                 <div class="hero-content">
                     <!-- TODO: Student – ปรับข้อความ Hero ให้สอดคล้องกับ SRS/User Stories ของกลุ่ม
                          ตัวอย่าง: เน้นเรื่องการส่งงาน, การดูสถานะ, ความยุติธรรมของการให้คะแนน -->
-                    <h1>Manage your ENGCE301 lab submissions in one place.</h1>
-                    <p class="hero-subtitle">
-                        View lab details, submit your work, and track your grades
-                        according to the requirements defined in your SRS &amp; User Stories.
-                    </p>
+                        <h1>Lab Submission Portal for ENGCE301</h1>
+                        <p class="hero-subtitle">
+                            ระบบส่งงาน LAB ออนไลน์สำหรับวิชา ENGCE301 ช่วยให้นักศึกษาเช็กสถานะการส่งงาน,
+                            ดู deadline และตรวจสอบคะแนน/feedback จากอาจารย์ได้ในที่เดียว
+                        </p>
 
                     <div class="hero-actions">
                         <a href="#upcoming-labs" class="btn primary">
@@ -52,9 +52,14 @@
                     </div>
 
                     <p class="hero-note">
-                        <!-- TODO: Student – แทนค่าด้วยข้อความที่โยงกับ Use Case เช่น UC-01 Submit Lab -->
-                        This page is designed from UC-01: Submit Lab and US-01 / US-03.
+                        This page is designed based on our Requirements:
+                        <strong>SRS v1.0</strong>,
+                        <strong>US-01 View Lab List</strong>,
+                        <strong>US-03 Submit Lab File</strong> and
+                        <strong>UC-03 Submit Lab</strong>,
+                        <strong>UC-04 View My Lab Status</strong>.
                     </p>
+
                 </div>
 
                 <div class="hero-visual">
@@ -102,23 +107,43 @@
 
                     <!-- TODO: Student – เพิ่ม Lab Card อย่างน้อย 2 ใบ ให้ตรงกับ Backlog ของกลุ่ม
                          ตัวอย่าง: LAB 4 – HTML Form for Submit Lab, LAB 5 – Authentication, etc. -->
-                    <article class="lab-card todo">
+                    <article class="lab-card">
                         <div class="lab-meta">
-                            <span class="badge badge-lab">TODO</span>
-                            <span class="lab-deadline">Due: (fill in)</span>
+                            <span class="badge badge-lab">LAB 4</span>
+                            <span class="lab-deadline">Due: 2025-02-20</span>
                         </div>
-                        <h3><!-- TODO: ชื่อ LAB ของกลุ่ม --></h3>
+                        <h3>HTML Submission Form & File Validation</h3>
                         <p class="lab-desc">
-                            <!-- TODO: คำอธิบายสั้น ๆ ของ LAB ที่เชื่อมกับ User Story จริง -->
+                            ออกแบบหน้าแบบฟอร์มส่งงาน LAB ที่รองรับการเลือกไฟล์ ตรวจสอบชนิดไฟล์ และแสดงสถานะการส่ง
+                            สอดคล้องกับ UC-03: Submit Lab และนโยบาย Late Submission
                         </p>
                         <ul class="lab-tags">
-                            <!-- TODO: แท็กที่เกี่ยวข้อง เช่น #HTML #CSS #BoxModel -->
+                            <li>#HTML</li>
+                            <li>#Form</li>
+                            <li>#Validation</li>
+                            <li>#UC-03</li>
                         </ul>
                     </article>
 
-                    <article class="lab-card todo">
-                        <!-- TODO: Student – Lab Card เพิ่มเติม -->
+                    <article class="lab-card">
+                        <div class="lab-meta">
+                            <span class="badge badge-lab">LAB 5</span>
+                            <span class="lab-deadline">Due: 2025-03-01</span>
+                        </div>
+                        <h3>My Labs Page – Status, Score & Feedback</h3>
+                        <p class="lab-desc">
+                            ขยายหน้า My Labs ให้รองรับการแสดงผลคะแนน, Feedback
+                            และสถานะของแต่ละ LAB ตาม UC-04 View My Lab Status และ UC-06 Grade Submission
+                        </p>
+                        <ul class="lab-tags">
+                            <li>#CSS</li>
+                            <li>#Status</li>
+                            <li>#Feedback</li>
+                            <li>#UC-04</li>
+                            <li>#UC-06</li>
+                        </ul>
                     </article>
+
                 </div>
             </section>
 
@@ -158,17 +183,38 @@
 
                     <!-- TODO: Student – เพิ่มแถว mock data สำหรับ LAB 3-5
                          และใช้ class status-pending / status-late ตามเงื่อนไขที่กลุ่มกำหนด -->
-                    <div class="status-row todo">
+                    <div class="status-row">
                         <span>LAB 3</span>
-                        <span><!-- TODO: ชื่อ LAB 3 ของกลุ่ม --></span>
-                        <span><span class="status-tag status-pending">TODO</span></span>
+                        <span>Agile Requirements & Use Case Modeling</span>
+                        <span><span class="status-tag status-pending">Awaiting Submission</span></span>
+                        <span>–</span>
+                    </div>
+
+                    <div class="status-row">
+                        <span>LAB 4</span>
+                        <span>HTML Submission Form & Validation</span>
+                        <span><span class="status-tag status-pending">Not Assigned</span></span>
+                        <span>–</span>
+                    </div>
+
+                    <div class="status-row">
+                        <span>LAB 4</span>
+                        <span>HTML Submission Form & Validation</span>
+                        <span><span class="status-tag status-pending">Not Assigned</span></span>
+                        <span>–</span>
+                    </div>
+
+                    <div class="status-row">
+                        <span>LAB 5</span>
+                        <span>My Labs Status & Feedback Page</span>
+                        <span><span class="status-tag status-pending">Not Assigned</span></span>
                         <span>–</span>
                     </div>
                 </div>
 
                 <p class="section-note">
-                    <!-- TODO: Student – เขียนข้อความอธิบายเชื่อมกับ Late Submission Policy จาก SRS -->
-                    Note: Late submissions will be marked according to the policy defined in your SRS.
+                    Status mapping is based on our Late Submission Policy in the SRS
+                    and the flows in <strong>UC-03 Submit Lab</strong> & <strong>UC-04 View My Lab Status</strong>.
                 </p>
             </section>
 
