--- a/Lab3/about.html
+++ b/Lab3/about.html
@@ -5,6 +5,8 @@
     <title>About · ENGCE301 Lab Submission Portal</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
 
