--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -7,6 +7,7 @@
 
     <!-- TODO: Student – ถ้าต้องการใช้ Google Fonts ให้เพิ่ม <link> ที่นี่
          และไปกำหนดในตัวแปร --font-sans ที่ styles.css -->
+    <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
